corpus/cpp/structured_binding/case-01/snapshots/gcc13_14/native_text_capture/render.concise.txt
note: some compiler details were not fully structured; original diagnostics are preserved
error: [structured_binding] only 1 name provided for structured binding
src/main.cpp: In function ‘int main()’:
    8 |     auto [only] = pair;
      |          ^~~~~~
raw : src/main.cpp:8:10: error: only 1 name provided for structured binding @ src/main.cpp:8:10
| src/main.cpp:8:10
|     auto [only] = pair;
|          ^
note: src/main.cpp:8:10: note: while ‘Pair’ decomposes into 2 elements